--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,8 @@
-remote_theme: pages-themes/cayman@v0.2.0
-plugins:
-- jekyll-remote-theme # add this line to the plugins list if you already have one
+remote_theme: pages-themes/slate@v0.2.0
 title: This is the personal homepage of the lover boy
 description: What you will find here are some of my projects and personal portofolio. Please let me know for further inquiries. 
 plugins:
   - jemoji
+  - jekyll-remote-theme
 url: "https://ANakagungdcip3.github.io/;
 markdown: kramdown
